--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "Brandon Caruana"
 title: "caruana.me"
-description: "A macro perspective on technology, cryptographic value creation, AI, cultural trends and the creator economy"
+description: "A macro perspective on technology, continual learning, cryptographic value creation, AI, cultural trends and the creator economy"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: 
